committing before work on enter press on textarea

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,23 @@
   outline: 0;
 }
 
+.notepad button {
+  padding: 10px;
+  font-size: 16px;
+  margin: 10px;
+  margin-right: 0px;
+  background-color: #0066FF;
+  color: #FFF;
+  border: 2px solid #0066FF;
+  border-radius: 5px;
+}
+
+.notepad button:hover {
+    background-color: #003399;
+    border: 2px solid #003399;
+    cursor: pointer;
+}
+
  .menu {
    background-color: skyblue;
  }
@@ -33,6 +50,14 @@
 #container {
   display: flex;
   justify-content: flex;
+}
+
+.theList li {
+  color: #333;
+  background-color: rgba(255, 255, 255, .5);
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
 }
 
 
