--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,13 @@
   margin-bottom: 15px;
   border-radius: 5px;
   list-style: none;
+
+  transition: background-color .2s ease-out;
+}
+
+.theList li:hover {
+  background-color: pink;
+  cursor: pointer;
 }
 
 ul.theList {
